JG-2004-01-29-1: Bugfix:    When queue instances were spooled as a result of a 
                            hostgroup modification, a wrong qinstance name was 
                            used for spooling. This resulted in missing queue 
                            instances after a qmaster shutdown and restart.
                 Enhancem.: Reduced number of attributes that are spooled for 
                            cluster queues and queue instances.
                 Review:    pending

MD-2004-01-29-1: Bugfix:    command (eg. qstat) crashes, 
                            if -u -q option get an empty argument
                 Issue:     #600
                 Changed:   qstat, qalter, qhost, qmod, qsub
                 Review:    EB

JG-2004-01-29-0: Bugfix:    If a loadsensor did output to stderr, the loadsensor
                            blocked when the pipe buffer between loadsensor and
                            execd was full.
                 Changed:   all (libuti)
                 Issue:     632
                 Review:    SG

MD-2004-01-29-0: Bugfix:    - fixed sgeee option in sge_config, distinst 
                            - changed comment in sge_job_master.c 
                 Changed:   sge_config, distinst 

SG-2004-01-29-0: Enhancem.: Added qstat -explain E support.
                 Review:    JG
                 Changed:   qmaster, qstat

CR-2004-01-29-0: Enhancem.: - host aliases file support (part II)

SD-2004-01-28-1: Enhancem.: - Set default dynamic priority range 
                              (ptf_min_priority, ptf_max_priority) for
                              Linux to nice values 0-20
                 Changed:   sge_execd

SD-2004-01-28-0: Enhancem.: - Changes to allow user-based functional policy
                              and user-based share tree policy to implement
                              Grid Engine 5.3 user_sort capability
                            - Added support for automatically creating